--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
     "name": "Kitsune",
+    "version": "0.0.0",
+    "private": true,
     "description": "Platform for Firefox Help",
     "repository": {
         "type": "git",
