Get a new version of npm.

--- a/scripts/docker/Dockerfile
+++ b/scripts/docker/Dockerfile
@@ -4,7 +4,11 @@ FROM mythmon/python-dev
 MAINTAINER #sumodev
 
 # Install system deps
-RUN apt-get install -y nodejs npm
+ENV DEBIAN_FRONTEND noninteractive
+RUN apt-get install -y python-software-properties software-properties-common
+RUN add-apt-repository ppa:chris-lea/node.js
+RUN apt-get update
+RUN apt-get install -y nodejs
 
 # This assumes that the runner put the git repo here.
 # This only works with the running docker though, not at build time, so...
@@ -12,14 +16,16 @@ VOLUME /kitsune
 WORKDIR /kitsune
 
 # ...also copy critical build files for build time.
-ADD package.json /kitsune/package.json
+COPY package.json /kitsune/package.json
 
 RUN pwd
 RUN ls /kitsune -la
 
 # Install JS deps
 RUN npm install
+
 # Install Python deps
+# TODO
 
 # This will always be run.
 ENTRYPOINT ["/kitsune/manage.py"]
