Cache all the things!

--- a/scripts/docker/Dockerfile
+++ b/scripts/docker/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get install -y python-software-properties software-properties-common
 RUN add-apt-repository ppa:chris-lea/node.js
 RUN apt-get update
 RUN apt-get install -y nodejs
+RUN apt-get install -y libmysqlclient-dev libxml2-dev libxslt1-dev zlib1g-dev libjpeg-dev
 
 # This assumes that the runner put the git repo here.
 # This only works with the running docker though, not at build time, so...
@@ -16,21 +17,14 @@ VOLUME /kitsune
 WORKDIR /kitsune
 
 # ...also copy critical build files for build time.
-COPY package.json /kitsune/package.json
-COPY compiled.txt /kitsune/requirements/compiled.txt
-
-RUN pwd
-RUN ls /kitsune -la
+ADD package.json /kitsune/package.json
+ADD requirements/compiled.txt /kitsune/requirements/compiled.txt
 
 # Install JS deps
 RUN npm install
 
 # Install Python deps
-# TODO
-RUN apt-get install -y libmysqlclient-dev libxml2-dev libxslt1-dev zlib1g-dev libjpeg-dev python-pip
-RUN pip install -r /kitsune/requirements/compiled.txt
+RUN pip install -r requirements/compiled.txt
 
-# This will always be run.
-ENTRYPOINT ["/kitsune/manage.py"]
-# These are the default parameters to the above, and may be overwritten.
-CMD ["runserver"]
+# These are the default command to run, but it can be overwritten.
+CMD ["/kitsune/manage.py", "runserver"]
