--- a/scripts/docker/Dockerfile
+++ b/scripts/docker/Dockerfile
@@ -29,4 +29,4 @@ RUN pip install -r requirements/compiled.txt
 EXPOSE 8000
 
 # These are the default command to run, but it can be overwritten.
-CMD ["/kitsune/manage.py", "runserver"]
+CMD ["/kitsune/manage.py", "runserver", "0.0.0.0:8000"]
